--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ MarkupSafe==2.1.5
 matplotlib==3.1.1
 mdurl==0.1.2
 MouseInfo==0.1.3
-numpy==1.19.2
+numpy==1.24.4
 opencv-python==4.1.1.26
 packaging==23.2
 pandas==0.25.3
@@ -130,3 +130,6 @@ Werkzeug==2.2.3
 wikipedia==1.4.0
 wrapt==1.16.0
 zipp==3.15.0
+pip>=24.0
+setuptools>=68.0
+wheel
