--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ matplotlib==3.1.1
 mdurl==0.1.2
 MouseInfo==0.1.3
 numpy==1.24.4
-opencv-python
+opencv-python==4.5.5.62
 packaging==23.2
 pandas==0.25.3
 parsimonious==0.8.1
