--- a/requirements.txt
+++ b/requirements.txt
@@ -1,134 +1,55 @@
 pip>=24.0
 setuptools>=68.0
 wheel
-absl-py==2.1.0
-altair==5.0.1
-asgiref==3.7.2
-astor==0.8.1
-attrdict==2.0.1
-attrs==24.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.13.3
-blinker==1.6.3
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-comtypes==1.4.6
-cycler==0.11.0
-cytoolz==0.12.3
-decorator==5.1.1
-Django==2.1.7
+
+# Core libs
+numpy==1.24.4
+pandas==1.5.3
+scikit-learn==1.3.0
+scipy==1.7.3
+matplotlib==3.8.3
+seaborn==0.10.1
+pillow==9.5.0
+
+# TensorFlow stack
+tensorflow==2.18.1
+tensorboard==2.18.0
+
+# CV and DL
+opencv-python==4.5.5.62
 dlib==19.24.6
-docopt==0.6.2
+torch==1.13.1
+torchvision==0.14.1
+torchaudio==0.13.1
+
+# Flask & Django
+Flask==2.2.5
+Django==2.1.7
+gunicorn==23.0.0
+
+# Web3
+web3==4.7.2
 eth-abi==1.3.0
 eth-account==0.3.0
-eth-hash==0.5.2
-eth-keyfile==0.5.1
-eth-keys==0.2.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
 eth-utils==1.9.5
-Flask==2.2.5
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-grpcio==1.62.3
-gunicorn==23.0.0
-h5py==2.10.0
 hexbytes==0.3.1
-idna==3.10
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-imutils==0.5.4
-itsdangerous==2.1.2
-Jinja2==3.1.5
-joblib==1.3.2
-Js2Py==0.74
-jsonschema==4.17.3
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-lru-dict==1.2.0
-Markdown==3.4.4
-markdown-it-py==2.2.0
-MarkupSafe==2.1.5
-matplotlib==3.1.1
-mdurl==0.1.2
-MouseInfo==0.1.3
-numpy==1.24.4
-opencv-python==4.5.5.62
-packaging==23.2
-pandas==0.25.3
-parsimonious==0.8.1
-Pillow==6.2.2
-pipwin==0.5.2
-pkgutil_resolve_name==1.3.10
-plotly==5.18.0
-protobuf==3.16.0
-pyarrow==12.0.1
-PyAutoGUI==0.9.54
-pycryptodome==3.22.0
-pydeck==0.8.1b1
-PyGetWindow==0.0.9
-Pygments==2.17.2
-pyjsparser==2.7.1
-Pympler==1.1
-PyMsgBox==1.0.9
-PyMySQL==0.9.3
-pyparsing==3.1.4
-pyperclip==1.9.0
-pypiwin32==223
-PyPrind==2.11.3
-PyRect==0.2.0
-pyrsistent==0.19.3
-PyScreeze==1.0.1
-pySmartDL==1.3.4
-python-dateutil==2.9.0.post0
-pyttsx3==2.98
-pytweening==1.2.0
-pytz==2023.3.post1
-pytz-deprecation-shim==0.1.0.post0
-pywhatkit==5.4
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.8.1
 rlp==2.0.1
-scikit-learn==0.22.2.post1
-scipy==1.7.3
-seaborn==0.10.1
-six==1.17.0
-sklearn==0.0
-smmap==5.0.2
-soupsieve==2.4.1
-SpeechRecognition==3.8.0
-sqlparse==0.4.4
+
+# Utility and misc
+absl-py==2.1.0
+altair==5.0.1
+beautifulsoup4==4.13.3
+requests==2.31.0
 streamlit==1.23.1
-tenacity==8.2.3
-tensorboard==1.14.0
-tensorflow==2.18.1
-tensorflow-estimator==1.14.0
-termcolor==2.3.0
-threadpoolctl==3.1.0
-tk==0.1.0
-toml==0.10.2
-toolz==0.12.1
-torch==1.13.1
-torchaudio==0.13.1
-torchvision==0.14.1
-tornado==6.2
-typing_extensions==4.7.1
-tzdata==2025.1
-tzlocal==4.3.1
-urllib3==1.22
+protobuf==3.16.0
+joblib==1.3.2
 validators==0.20.0
 watchdog==3.0.0
-web3==4.7.2
-websockets==6.0
-Werkzeug==2.2.3
+typing_extensions==4.7.1
+python-dateutil==2.9.0.post0
+pyarrow==12.0.1
+plotly==5.18.0
+pywhatkit==5.4
+SpeechRecognition==3.8.0
+pyttsx3==2.98
 wikipedia==1.4.0
-wrapt==1.16.0
-zipp==3.15.0
