--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ wheel
 
 # Core libs
 numpy==1.24.4
-pandas==1.5.3
-scikit-learn==1.3.0
-scipy==1.7.3
+scipy>=1.10.0
+pandas>=1.5.0
+scikit-learn>=1.2.0
 matplotlib==3.8.3
 seaborn==0.10.1
 pillow==9.5.0
