--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,9 @@
-pip>=24.0
-setuptools>=68.0
-wheel
-
-# Core libs
-numpy==1.24.4
-scipy>=1.10.0
-pandas>=1.5.0
-scikit-learn>=1.2.0
-matplotlib==3.8.3
-seaborn==0.10.1
-pillow==9.5.0
-
-# TensorFlow stack
-tensorflow==2.18.1
-tensorboard==2.18.0
-
-# CV and DL
-opencv-python==4.5.5.62
-dlib==19.24.6
-torch==1.13.1
-torchvision==0.14.1
-torchaudio==0.13.1
-
-# Flask & Django
-Flask==2.2.5
-Django==2.1.7
-gunicorn==23.0.0
-
-# Web3
-web3==4.7.2
-eth-abi==1.3.0
-eth-account==0.3.0
-eth-utils==1.9.5
-hexbytes==0.3.1
-rlp==2.0.1
-
-# Utility and misc
-absl-py==2.1.0
-altair==5.0.1
-beautifulsoup4==4.13.3
-requests==2.31.0
-streamlit==1.23.1
-protobuf==3.16.0
-joblib==1.3.2
-validators==0.20.0
-watchdog==3.0.0
-typing_extensions==4.7.1
-python-dateutil==2.9.0.post0
-pyarrow==12.0.1
-plotly==5.18.0
-pywhatkit==5.4
-SpeechRecognition==3.8.0
-pyttsx3==2.98
-wikipedia==1.4.0
+asgiref==3.3.4
+Django==3.2
+django-filter==2.4.0
+djangorestframework==3.12.4
+fontawesome==5.10.1.post1
+Markdown==3.3.4
+pytz==2021.1
+sqlparse==0.4.1
+tracestack==0.2.4
