--- a/render.yaml
+++ b/render.yaml
@@ -6,15 +6,32 @@ services:
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
       python manage.py migrate
-    startCommand: gunicorn mysite.wsgi:application
+    startCommand: gunicorn mysite.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.0
       - key: DJANGO_SETTINGS_MODULE
         value: mysite.settings
-      - key: CLOUDINARY_CLOUD_NAME
-        value: your_cloud_name_here
-      - key: CLOUDINARY_API_KEY
-        value: your_api_key_here
-      - key: CLOUDINARY_API_SECRET
-        value: your_api_secret_here
+      - key: SECRET_KEY
+        generateValue: true
       - key: DEBUG
         value: False
+      - key: CLOUDINARY_CLOUD_NAME
+        sync: false
+      - key: CLOUDINARY_API_KEY
+        sync: false
+      - key: CLOUDINARY_API_SECRET
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: bloodbank-db
+          property: connectionString
+    healthCheckPath: /
+    autoDeploy: true
+    plan: free
+
+databases:
+  - name: bloodbank-db
+    databaseName: bloodbank
+    user: bloodbank_user
+    plan: free
