fix: Update dependencies and add Font Awesome webfonts - Update requirements.txt with compatible version ranges - Add Font Awesome webfonts to static directory - Add download scripts for font files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-asgiref==3.3.4
-Django==3.2
-django-filter==2.4.0
-djangorestframework==3.12.4
-fontawesome==5.10.1.post1
-Markdown==3.3.4
-pytz==2021.1
-sqlparse==0.4.1
-tracestack==0.2.4
-gunicorn==20.1.0
-cloudinary==1.28.1
-django-cloudinary-storage==0.3.0
-whitenoise==6.4.0
-dj-database-url==1.0.0
-psycopg2-binary==2.9.5
-python-dotenv==0.19.2
+asgiref>=3.3.4,<4.0.0
+Django>=3.2,<4.3
+django-filter>=2.4.0,<3.0.0
+djangorestframework>=3.12.4,<4.0.0
+fontawesome>=5.10.1.post1,<6.0.0
+Markdown>=3.3.4,<4.0.0
+pytz>=2021.1,<2024.0
+sqlparse>=0.4.1,<1.0.0
+tracestack>=0.2.4,<0.3.0
+gunicorn>=20.1.0,<21.0.0
+cloudinary>=1.28.1,<2.0.0
+django-cloudinary-storage>=0.3.0,<0.4.0
+whitenoise>=6.4.0,<7.0.0
+dj-database-url>=1.0.0,<2.0.0
+psycopg2-binary>=2.9.5,<3.0.0
+python-dotenv>=0.19.2,<1.0.0
