--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ whitenoise>=6.4.0,<7.0.0
 dj-database-url>=1.0.0,<2.0.0
 psycopg2-binary>=2.9.5,<3.0.0
 python-dotenv>=0.19.2,<1.0.0
+django-widget-tweaks==1.4.12
